# Hello

./: CMakeLists.txt  README.md  uml.mdl
Forms/: mainwindow.ui
Headers/: Config.h  Food.h  GameWorld.h  Mainwindow.h  NeuralNetwork.h  Population.h  Snake.h  TrainingPanel.h  Util.h
Sources/: Mainwindow.cpp  main.cpp  mysql_test.cpp
Sources/config/: Config.cpp
Sources/model/: Food.cpp  GameWorld.cpp  Population.cpp  Snake.cpp  TrainingPanel.cpp
Sources/util/: NeuralNetwork.cpp  Util.cpp
